Changes
=======

This documents changes as they are made.  Note that if you received this file
via CVS the version of the first entry is the forthcoming version number.

0.34 - Jul 28th 2003
--------------------
- Switched volume setting from global mixer to PCM, from Conrad Wood
  <cnw@conradwood.net>
- Applied patch from Paul Hampson <Paul.Hampson@anu.edu.au> to read the
  ID3v2 header
- Fixed header include bugs (time, random errors, etc.)
- Fix mservedit so it handles an editor with arguments, patch from
  Nick <nwp@lemon-computing.com>
- Deal with different file extensions than mp3
- Allow mservcli.h client library header to be included twice
- Fix soundcard.h detection on some platforms
- Add explicit newlines to strings for gcc3
- Add reset message, and flush it, before the reset
- Fix volume on some platform so it correctly moves up and down minimum value
- Fix descriptor leak when changing volume
- If exec of player fails, do not try again - display error instead
- A whole bunch of things from this release come from David Kimdon's work
  on the debian port, and David Brownlee's work on the NetBSD port.  Thank
  you guys!

0.33 - Jul 15th 2000
--------------------
- Applied patch from Joseph Heenan <joseph@ping.demon.co.uk> to provide
  better logging of duplicate albums
- Applied patch from <unknown> to give a new 'play' option in the config file
  to get mserv to automatically start on start-up
- Applied patch from Joseph Heenan <joseph@ping.demon.co.uk> that improves
  the CDDB splitting of track/author names in mservripcd
- Fixed QUEUE incorrect bounds check on track argument
- Fixed STOP/NEXT commands so that zombie processes don't appear
- Fixed some response codes
- Added ASEARCH command for searching for an album based on name

0.32 - Jun 6th 2000
-------------------
- Fixed bug in RATE <album> <string> which rated the songs in an album that
  had been rated, instead of the ones that weren't

0.31 - Jan 25th 2000
--------------------